--- a/package.json
+++ b/package.json
@@ -4,22 +4,16 @@
   "description": "A discord bot you can use to give accounts to your server's members",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/silvanohirtie/account-generator.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/silvanohirtie/account-generator/issues"
-  },
-  "homepage": "https://github.com/silvanohirtie/account-generator#readme",
   "dependencies": {
     "async": "^3.1.0",
-    "discord.js": "^11.5.1",
+    "cors": "^2.8.5",
+    "discord.js": "^11.6.4",
     "express": "^4.17.1",
     "firstline": "^2.0.2",
     "line-reader": "^0.4.0"
