--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.17.1",
     "firstline": "^2.0.2",
     "line-reader": "^0.4.0"
+  },
+  "engines": {
+    "node": "16.6.x"
   }
 }
